Revert "Prevent feedback menu wrapping for long medialist names"
This reverts commit 9e52d04b73d0de0168a28c1c6cc75a35e7ab0f8e.

--- a/client/templates/contact/details.import.less
+++ b/client/templates/contact/details.import.less
@@ -112,8 +112,6 @@ a.contact-menu-option {
 }
 
 .activity-menu {
-  overflow-x: visible;
-  white-space: nowrap;
   font-size: 0;
   margin: 15px 0 25px;
   padding: 0;
